classDiagram
    class InvestmentInfo {
        +[u8; 15] investment_id
        +[u8; 4] version
        +InvestmentType investment_type
        +[[u8; 10]; 3] stage_ratio
        +i64 start_at
        +i64 end_at
        +u64 investment_upper_limit
        +Vec~Pubkey~ execute_whitelist
        +Vec~Pubkey~ update_whitelist
        +Vec~Pubkey~ withdraw_whitelist
        +Pubkey vault
        +InvestmentState state
        +bool is_active
        +i64 created_at
        +validate_stage_ratio()
        +verify_signers_3_of_5()
        +enforce_3_of_5_signers()
    }

    class InvestmentRecord {
        +u16 batch_id
        +u64 record_id
        +[u8; 15] account_id
        +[u8; 15] investment_id
        +[u8; 4] version
        +Pubkey wallet
        +u64 amount_usdt
        +u64 amount_hcoin
        +u8 stage
        +i64 revoked_at
        +i64 created_at
        +validate_investment()
        +calculate_hcoin_allocation()
    }

    class ProfitShareCache {
        +u16 batch_id
        +[u8; 15] investment_id
        +[u8; 4] version
        +u64 subtotal_profit_usdt
        +u64 subtotal_estimate_sol
        +i64 executed_at
        +i64 created_at
        +Vec~ProfitEntry~ entries
        +validate_execution()
        +calculate_estimates()
    }

    class RefundShareCache {
        +u16 batch_id
        +u8 year_index
        +[u8; 15] investment_id
        +[u8; 4] version
        +u64 subtotal_refund_hcoin
        +u64 subtotal_estimate_sol
        +i64 executed_at
        +i64 created_at
        +Vec~RefundEntry~ entries
        +validate_execution()
        +calculate_estimates()
        +get_refund_percentage()
    }

    class ProfitEntry {
        +[u8; 15] account_id
        +Pubkey wallet
        +u64 amount_usdt
        +u16 ratio_bp
        +Pubkey recipient_ata
        +validate_ratio()
        +get_ata_address()
    }

    class RefundEntry {
        +[u8; 15] account_id
        +Pubkey wallet
        +u64 amount_hcoin
        +u8 stage
        +Pubkey recipient_ata
        +validate_stage()
        +get_ata_address()
    }

    class InvestmentType {
        <<enumeration>>
        Standard = 0
        Csr = 1
    }

    class InvestmentState {
        <<enumeration>>
        Init = 0
        Pending = 1
        Completed = 999
    }

    InvestmentInfo --> InvestmentRecord
    InvestmentInfo --> ProfitShareCache
    InvestmentInfo --> RefundShareCache
    ProfitShareCache --> ProfitEntry
    RefundShareCache --> RefundEntry
    InvestmentInfo --> InvestmentType
    InvestmentInfo --> InvestmentState

    note for InvestmentInfo "Size: 772 bytes, PDA seeds: investment_info, investment_id, version"
    note for InvestmentRecord "Size: 128 bytes, PDA seeds: investment_record, investment_id, version, batch_id, record_id"
    note for ProfitShareCache "Size: 1845 bytes, PDA seeds: profit_cache, investment_id, version, batch_id"
    note for RefundShareCache "Size: 1826 bytes, PDA seeds: refund_cache, investment_id, version, batch_id, year_index"
    note for ProfitEntry "Entry size: 89 bytes, Max entries per batch: 30"
    note for RefundEntry "Entry size: 88 bytes, Max entries per batch: 30, Stage: 1-3" 